# django-scheduler

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGELOG  LICENSE.txt  MANIFEST.in  README.md  README.textile  TODO.txt  index.html  models.py  params.json  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  views.py
.github/workflows/: check.yml  test.yml
docs/: Makefile  changelog.txt  conf.py  index.txt  install.txt  models.txt  overview.txt  periods.txt  settings.txt  template_tags.txt  utils.txt  views.txt
project_sample/: manage.py  project_sample.db  settings.py  urls.py
project_sample/fixtures/: schedule.json
project_sample/management/commands/: load_sample_data.py
project_sample/schedule_tests/: tests.py
project_sample/site_media/: jquery.timePicker.js  schedule.css
project_sample/site_media/css/: jquery-ui.css  jquery.weekcalendar.css  schedule_weekcalendar.css  weekcalendar.css
project_sample/templates/: base.html  fullcalendar.html  homepage.html  site_base.html
project_sample/templates/schedule/: event.html  (+22 more)
schedule/: __init__.py  admin.py  apps.py  forms.py  manage.py  models-dot-py  models.py  occurrence.py  periods.py  requirements.txt  schedule.db  settings.py  signals.py  tests.py  urls.py  utils.py  views.py  widgets.py
schedule/conf/: settings.py
schedule/feeds/: __init__.py  atom.py  ical.py  icalendar.py
schedule/fixtures/: schedule.json
schedule/migrations/: 0001_initial.py  0002_event_color_event.py  0003_auto_20160715_0028.py  0003_auto_20160921_0745.py  0004_auto_20161228_0745.py  0004_text_fields_not_null.py  0005_auto_20170714_1735.py  0005_verbose_name_plural_for_calendar.py  0006_update_text_fields_empty_string.py  0007_merge_text_fields.py  0008_calendar_slug_unique.py  0008_gfk_index.py  0009_merge.py  0009_merge_20180108_2303.py  0010_auto_20180110_0810.py  0010_events_set_missing_calendar.py  0011_event_calendar_not_null.py  0012_auto_20180115_0810.py  0012_auto_20191025_1852.py  0012_calendar_desc.py  0013_auto_20210502_2303.py  0014_use_autofields_for_pk.py  0015_alter_event_end.py  0015_rename_calendarrelation_content_type_object_id_schedule_ca_content_cddadb_idx_and_more.py
schedule/models/: __init__.py  calendars.py  events.py  rules.py
schedule/south_migrations/: 0001_initial.py  0002_auto__add_field_occurrence_created_on__add_field_occurrence_updated_on.py
schedule/static/: schedule.css  schedule.js
schedule/templates/: base.html  fullcalendar.html  fullcalendar_admin.html  fullcalendar_modal.html  fullcalendar_script.html  site_base.html
schedule/templatetags/: scheduletags.py
schedule/tests/: __init__.py  test_calendar.py  test_event.py  test_feed.py  test_forms.py  test_models.py  test_occurrence.py  test_periods.py  test_perms.py  test_rule.py  test_templatetags.py  test_utils.py  test_views.py
scheduling/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
scheduling/templatetags/: calendartags.py
tests/: __init__.py  settings.py  test_calendar.py  test_event.py  test_feed.py  test_forms.py  test_management_command.py  test_occurrence.py  test_periods.py  test_perms.py  test_rule.py  test_settings.py  test_swapped_models.py  test_templatetags.py  test_utils.py  test_views.py
tests/fixtures/: schedule.json
tests/test_project/: models.py  settings.py  updated_settings.py.tpl
(+61 files in other folders)
