[flake8]
exclude = .tox, docs
ignore =
    W504  # line break after binary operator
    E501

[metadata]
license_file = LICENSE.txt

[isort]
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = schedule
line_length = 79
multi_line_output = 5
not_skip = __init__.py
skip = .tox
