[metadata]
name = django-scheduler
version = 0.9.6
description = A calendaring app for Django.
long_description  =  file: README.md
long_description_content_type = text/markdown
author = Leonardo Lazzaro
author_email = lazzaroleonardo@gmail.com
url = https://github.com/llazzaro/django-scheduler
license = BSD
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires=
    Django>=2.2
    python-dateutil>=2.1
    pytz>=2013.9
    icalendar>=3.8.4
packages =
    schedule
    schedule.feeds
    schedule.models
    schedule.migrations
    schedule.templatetags


[flake8]
ignore =
    W503
    E501


[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = schedule
line_length = 88
multi_line_output = 3
